create style.css file

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     </head>
     <body>
         <div class="search-options">
-            <button class="img-search"><a src="img-search.html">Image Search</a></button>
-            <button class="adv-search"><a src="adv-search.html">Advance Search</a></button>
+            <button class="img-search"><a src="img-search.html">Images</a></button>
+            <button class="adv-search"><a src="adv-search.html">Advance</a></button>
         </div>
         <div class="main-container">
             <form action="https://google.com/search">
