change search  buttons to links

--- a/index.html
+++ b/index.html
@@ -2,17 +2,20 @@
 <html lang="en">
     <head>
         <title>Search</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="search-options">
-            <button class="img-search"><a src="img-search.html">Images</a></button>
-            <button class="adv-search"><a src="adv-search.html">Advance</a></button>
-        </div>
         <div class="main-container">
-            <form action="https://google.com/search">
-                <input type="text" name="q">
-                <input type="submit" value="Google Search">
-            </form>
+            <div class="search-options">
+                <a href="img-search.html">Images</a>
+                <a href="adv-search.html">Advance</a>
+            </div>
+            <div class="search-container">
+                <form action="https://google.com/search">
+                    <input type="text" name="q">
+                    <input type="submit" value="Google Search">
+                </form>
+            </div>
         </div>        
     </body>
 </html>
