--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
                 <a href="img-search.html">Images</a>
                 <a href="adv-search.html">Advance</a>
             </div>
+            <div class="brand">
+                <h1>Smoogle</h1>
+            </div>
             <div class="search-container">
                 <form action="https://google.com/search">
                     <input type="text" name="q">
