--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <div class="search-container">
                 <form action="https://google.com/search">
-                    <input type="text" name="q">
+                    <input id= "search-box" type="text" name="q">
                     <input type="submit" value="Google Search">
                 </form>
             </div>
