change class name from search-options to navigator-container

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="main-container">
-            <div class="search-options">
+            <div class="navigator-container">
                 <a href="img-search.html">Images</a>
                 <a href="adv-search.html">Advance</a>
             </div>
