add navigator items container

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <body>
         <div class="main-container">
             <div class="navigator-container">
-                <a href="img-search.html">Images</a>
-                <a href="adv-search.html">Advance</a>
+                <div class="navigator-items">
+                    <a href="img-search.html">Images</a>
+                    <a href="adv-search.html">Advance</a>
+                </div>
             </div>
             <div class="brand">
                 <h1>Smoogle</h1>
