add brand-container and logo-container div

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
                     <a href="adv-search.html">Advance</a>
                 </div>
             </div>
-            <div class="brand">
-                <h1>Smoogle</h1>
+            <div class="brand-container">
+                <div class="logo-container">
+                    <img src="./logo/logo.png" alt="google">
+                </div>
             </div>
             <div class="search-container">
                 <form action="https://google.com/search">
