--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </div>
             <div class="brand-container">
                 <div class="logo-container">
-                    <img src="./logo/logo.png" alt="google">
+                    <img class= "logo" src="./logo/logo.png" alt="google">
                 </div>
             </div>
             <div class="search-container">
