add style to input form

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
             </div>
             <div class="search-container">
                 <form action="https://google.com/search">
-                    <input id= "search-box" type="text" name="q">
-                    <input type="submit" value="Google Search">
+                    <div class="search-form">
+                        <input id= "search-box" type="text" name="q">
+                        <input type="submit" value="Google Search">
+                    </div>
                 </form>
             </div>
         </div>        
