add autofocus to search input

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="search-container">
                 <form action="https://google.com/search">
                     <div class="search-form">
-                        <input id= "search-box" type="text" name="q">
+                        <input id= "search-box" type="text" name="q" autofocus>
                         <input type="submit" value="Google Search">
                     </div>
                 </form>
