add button feeling lucky

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <div class="search-form">
                         <input id= "search-box" type="text" name="q" autofocus>
                         <input type="submit" value="Google Search">
+                        <input type="button" value="I'm feeling lucky">
                     </div>
                 </form>
             </div>
