add feeling lucky button

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <form action="https://google.com/search">
                     <div class="search-form">
                         <input id= "search-box" type="text" name="q" autofocus>
-                        <input type="submit" value="Google Search">
-                        <input type="button" value="I'm feeling lucky">
+                        <input class= "button" type="submit" value="Google Search">
+                        <input class= "button" type="button" value="I'm feeling lucky">
                     </div>
                 </form>
             </div>
