add advance search title and style it

--- a/adv-search.html
+++ b/adv-search.html
@@ -7,13 +7,20 @@
     <body>
         <div class="main-container">
             <div class="navigator-container">
-                <div class="logo-small"></div>
+                <div class="logo-small">
+                    <img src="./logo/logo.png" alt="Google">
+                </div>
                 <div class="navigator-items">
                     <a href="index.html">Home</a>
                     <a href="img-search.html">Images</a>
                 </div>
             </div>
             <div class="advance-search">
+                <label>Advance Search<label>
+            </div>
+            <div class="advance-search-form">
+                <form action="https://google.com/search"></form>
+                <label for="as_q"></label>
             </div>
         </div>        
     </body>
