add advance-form titles

--- a/adv-search.html
+++ b/adv-search.html
@@ -20,6 +20,13 @@
             </div>
             <div class="advance-search-form">
                 <form action="https://google.com/search"></form>
+                <div class="form-title">
+                    <span>Find pages with...</span>
+                </div>
+                <div class="black-space"></div>
+                <div class="to-do-text">
+                    <span>To do this in the search box.</span>
+                </div>
                 <label for="as_q"></label>
             </div>
         </div>        
