add sizing to form with flex

--- a/adv-search.html
+++ b/adv-search.html
@@ -23,7 +23,7 @@
                 <div class="form-title">
                     <span>Find pages with...</span>
                 </div>
-                <div class="black-space"></div>
+                <div class="blank-space"></div>
                 <div class="to-do-text">
                     <span>To do this in the search box.</span>
                 </div>
