add style to form title

--- a/adv-search.html
+++ b/adv-search.html
@@ -24,7 +24,7 @@
                     <span>Find pages with...</span>
                 </div>
                 <div class="blank-space"></div>
-                <div class="to-do-text">
+                <div class="to-do">
                     <span>To do this in the search box.</span>
                 </div>
                 <label for="as_q"></label>
