--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body>
         <div class="main-container">
             <div class="navigator-container">
+                <div class="empty"></div>
                 <div class="navigator-items">
                     <a href="img-search.html">Images</a>
                     <a href="adv-search.html">Advance</a>
