--- a/adv-search.html
+++ b/adv-search.html
@@ -19,15 +19,18 @@
                 <label>Advance Search<label>
             </div>
             <div class="advance-search-form">
-                <form action="https://google.com/search"></form>
-                <div class="form-title">
-                    <span>Find pages with...</span>
-                </div>
-                <div class="blank-space"></div>
-                <div class="to-do">
-                    <span>To do this in the search box.</span>
-                </div>
-                <label for="as_q"></label>
+                <form action="https://google.com/search">
+                    <div class="top-form-container">
+                        <div class="form-title">
+                            <span>Find pages with...</span>
+                        </div>
+                        <div class="blank-space"></div>
+                        <div class="to-do">
+                            <span>To do this in the search box.</span>
+                        </div>
+                    </div>
+                    <label for="as_q"></label>
+                </form>
             </div>
         </div>        
     </body>
