add main-form-container div to inside form tag

--- a/adv-search.html
+++ b/adv-search.html
@@ -20,16 +20,18 @@
             </div>
             <div class="advance-search-form">
                 <form action="https://google.com/search">
-                    <div class="top-form-container">
-                        <div class="form-title">
-                            <span>Find pages with...</span>
+                    <div class="main-form-container">
+                        <div class="top-form-container">
+                            <div class="form-title">
+                                <span>Find pages with...</span>
+                            </div>
+                            <div class="blank-space"></div>
+                            <div class="to-do">
+                                <span>To do this in the search box.</span>
+                            </div>
                         </div>
-                        <div class="blank-space"></div>
-                        <div class="to-do">
-                            <span>To do this in the search box.</span>
-                        </div>
+                        <label for="as_q"></label>
                     </div>
-                    <label for="as_q"></label>
                 </form>
             </div>
         </div>        
