add first and second label and input for first search option

--- a/adv-search.html
+++ b/adv-search.html
@@ -21,15 +21,16 @@
             <div class="advance-search-form">
                 <form action="https://google.com/search">
                     <div class="main-form-container">                        
-                            <div class="form-title">
-                                <span>Find pages with...</span>
-                            </div>
-                            <div class="blank-space"></div>
-                            <div class="to-do">
-                                <span>To do this in the search box.</span>
-                            </div>
-                        
-                        <label for="as_q"></label>
+                        <div class="form-title">
+                            <span>Find pages with...</span>
+                        </div>
+                        <div class="blank-space"></div>
+                        <div class="to-do">
+                            <span>To do this in the search box.</span>
+                        </div>                    
+                        <label class="first-label" for="as_q">all these words:</label>
+                        <input class="adv-search-imput" type="text">
+                        <label class="second-label">Type the important words: tri-colour rat terrier</label>
                     </div>
                 </form>
             </div>
