add class to input in main-form container

--- a/adv-search.html
+++ b/adv-search.html
@@ -29,7 +29,7 @@
                             <span>To do this in the search box.</span>
                         </div>                    
                         <label class="first-label" for="as_q">all these words:</label>
-                        <input class="adv-search-imput" type="text">
+                        <input class="adv-search-input" type="text">
                         <label class="second-label">Type the important words: tri-colour rat terrier</label>
                     </div>
                 </form>
